--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -41,6 +41,10 @@ a{
     }
 }
 
+.active{
+    border-bottom: 1px solid black;
+}
+
 .fa-regular.fa-user,
 .fa-solid.fa-cart-shopping,
 .fa-brands.fa-instagram,
