--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,10 +21,14 @@ a{
 }
 
 .button {
-    border: none
+    border: none;
+
+    :focus{
+        border: none;
+    }
 }
 
-.filter-btn {
+.nav-item {
     text-transform: uppercase;
     background-color: transparent;
     border: none;
@@ -51,11 +55,10 @@ a{
 .fa-brands.fa-spotify,
 .fa-brands.fa-youtube {
     color: black;
-    margin-left: 5px;
-    margin-right: 5px;
 
     &:hover {
         opacity: 0.5;
+        cursor: pointer;
     }
 }
 
@@ -65,20 +68,11 @@ article {
     }
     .name {
         font-weight: bold;
-        font-size: medium;
     }
     .addToCart:hover {
         background-color: black !important;
         color: white;
     }
-}
-
-.show {
-    display: block;
-}
-
-.hidden {
-    display: none;
 }
 
 footer {
