--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -118,6 +118,10 @@ article {
     border-top: 1px solid black;
 }
 
+.error {
+    border: 1px solid red;
+}
+
 footer {
 	margin-right: auto;
 	margin-left: auto;
